fix: bug fixedin overflow layout

--- a/client/src/features/Home/components/Header/Header.scss
+++ b/client/src/features/Home/components/Header/Header.scss
@@ -250,7 +250,7 @@
         }
 
         p.left__text {
-          margin-bottom: 230px;
+          margin-bottom: 290px;
         }
 
         .left__bottom {
@@ -266,7 +266,7 @@
         width: 100%;
 
         .right__img {
-          top: 150px;
+          top: 180px;
           right: 15px;
         }
       }
