--- a/client/src/pages/style.scss
+++ b/client/src/pages/style.scss
@@ -355,7 +355,6 @@
 // course detail page
 .coursedetail__page {
   position: relative;
-  overflow: hidden;
 
   .page__bgimages {
     .bgimage1 {
